src/Views/HomePage/HomePage.scss
.section-divider {
  width: 100.8%;
  height: 20.6rem;
  background-color: var(--bg-color);
  position: relative;
}

.hero-divider {
  transform: rotate(-5deg);
  border-top: 8px solid var(--gold);
  top: -7rem;
}

.about-divider {
  transform: rotate(5deg);
  border-bottom: 8px solid var(--gold);
  top: 32rem;
}

.homePage {
  width: 100%;
  position: relative;

  .header {
    position: absolute !important;
  }
}

.hero-header {
  position: absolute;
  z-index: 2;
}

// Media Queries

@media (max-width: 599px) {
  .about-divider {
    top: 68px;
    width: 103% !important;
  }
}

@media only screen and (min-width: 1700px) and (max-width: 2099px) {
  .hero-divider {
    transform: rotate(-4deg);
  }
}

@media only screen and (min-width: 2100px) {
  .hero-divider {
    transform: rotate(-4deg);
    top: -8rem;
  }
}

